Bug fixing
Few bugs have been fixed such as not readable text in dark mode, headline not aligned in mobile devices, and more.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ body {
   letter-spacing: 0.2px;
 }
 
+.graduation-emoji, .experience-emoji {
+  color: #5b5b5b;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -537,7 +541,7 @@ b, strong {
 }
 @media (max-width: 580px) {
 	.animated-info {
-		min-width: 200px;
+		min-width: 240px;
 	}
   .animated-item {
     font-size: 30px;
